--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ dependencies = [
     "requests>=2.31.0",
     "beautifulsoup4>=4.12.0",
     "markdownify>=0.11.6",
-    "click>=8.1.0",
     "urllib3>=2.0.0",
     "lxml>=4.9.0",
 ]
@@ -29,9 +28,16 @@ prod = [
     "databricks-sdk>=0.8.0",
     "databricks-connect>=13.0.0",
 ]
+ml = [
+    "kaggle>=1.5.0",
+    "pandas>=2.0.0",
+    "scikit-learn>=1.3.0",
+    "matplotlib>=3.7.0",
+    "seaborn>=0.12.0",
+    "numpy>=1.24.0",
+    "mlflow>=2.8.0",
+]
 
-[project.scripts]
-bixi-scraper = "bixi_agent.cli:main"
 
 [build-system]
 requires = ["hatchling"]
