--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Scott McKean", email = "scott.mckean@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.12"
 dependencies = [
     "requests>=2.31.0",
     "beautifulsoup4>=4.12.0",
@@ -25,24 +25,16 @@ dev = [
     "mypy>=1.5.0",
     "ruff>=0.1.0",
 ]
-prod = [
-    "databricks-sdk>=0.8.0",
-    "databricks-connect>=13.0.0",
-]
 ml = [
-    "kaggle>=1.5.0",
+    "h3",
+    "h3pandas",
     "pandas>=2.0.0",
     "scikit-learn>=1.3.0",
     "matplotlib>=3.7.0",
     "seaborn>=0.12.0",
     "numpy>=1.24.0",
-    "mlflow>=2.8.0",
+    "mlflow>=3.2.0",
 ]
-
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
 
 [tool.black]
 line-length = 88
